spited up ino texture and element Shader
