# server/main.go
@@ -16,9 +16,12 @@ func main() {
 	r.HandleFunc("/api/animation/list", httpHandler.HandleAnimationList).Methods("GET")
 	r.HandleFunc("/api/animation/get/{animationID}", httpHandler.HandleAnimationGet).Methods("GET")
 	r.HandleFunc("/api/animation/image/{animationID}", httpHandler.HandleAnimationGetImage).Methods("GET")
-	r.HandleFunc("/api/shader/list", httpHandler.HandleShaderList).Methods("GET")
-	r.HandleFunc("/api/shader/get/{shaderID}", httpHandler.HandleShaderGet).Methods("GET")
-	r.HandleFunc("/api/shader/image/{shaderID}", httpHandler.HandleShaderGetImage).Methods("GET")
+	r.HandleFunc("/api/elementShader/list", httpHandler.HandleElementShaderList).Methods("GET")
+	r.HandleFunc("/api/elementShader/get/{shaderID}", httpHandler.HandleElementShaderGet).Methods("GET")
+	r.HandleFunc("/api/elementShader/image/{shaderID}", httpHandler.HandleElementShaderGetImage).Methods("GET")
+	r.HandleFunc("/api/textureShader/list", httpHandler.HandleTextureShaderList).Methods("GET")
+	r.HandleFunc("/api/textureShader/get/{shaderID}", httpHandler.HandleTextureShaderGet).Methods("GET")
+	r.HandleFunc("/api/textureShader/image/{shaderID}", httpHandler.HandleTextureShaderGetImage).Methods("GET")
 	r.HandleFunc("/api/client/list", httpHandler.HandleClientList).Methods("GET")
 	r.HandleFunc("/api/client/set/{clientID}", httpHandler.HandleClientSet).Methods("POST")
 	r.HandleFunc("/api/client/set/", httpHandler.HandleClientSet).Methods("POST")
